fix i18n for elevation profile

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -714,7 +714,7 @@
             }
         }
     },
-    "Koala.view.window.ElevationProfile": {
+    "Koala.view.panel.ElevationProfile": {
         "config": {
             "data": {
                 "title": "Elevation profile",
