--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -875,6 +875,7 @@
                     "startFieldTitle": "Start",
                     "viaFieldTitle": "Via",
                     "endFieldTitle": "Ziel",
+                    "addEmptyPoint": "Neuer Punkt",
                     "routingProfileFieldTitle": "Profil",
                     "computeRouteButtonText": "Route Berechnen",
                     "addStartPoint": "Startpunkt setzen",
