add routing summary

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -885,7 +885,8 @@
                     "downloadButtonText": "Download",
                     "error_msg_geocoding": "Standpunkt konnte nicht geladen werden. Bitte versuchen Sie es (später) erneut.",
                     "error_msg_routing_request": "Routenplanung fehlgeschlagen. Bitte versuchen Sie es (später) erneut.",
-                    "error_msg_download": "Download fehlgeschlagen. Bitte versuchen sie es (später) erneut."
+                    "error_msg_download": "Download fehlgeschlagen. Bitte versuchen sie es (später) erneut.",
+                    "routingSummaryDetailsButton": "Details"
                 }
             }
         }
