move routing profile buttons

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -886,7 +886,10 @@
                     "error_msg_geocoding": "Standpunkt konnte nicht geladen werden. Bitte versuchen Sie es (später) erneut.",
                     "error_msg_routing_request": "Routenplanung fehlgeschlagen. Bitte versuchen Sie es (später) erneut.",
                     "error_msg_download": "Download fehlgeschlagen. Bitte versuchen sie es (später) erneut.",
-                    "routingSummaryDetailsButton": "Details"
+                    "routingSummaryDetailsButton": "Details",
+                    "profileCarText": "Mit dem Auto",
+                    "profileBycicleText": "Mit dem Fahrrad",
+                    "profileWalkingText": "Zu Fuß"
                 }
             }
         }
