add modern elevation panel

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -2015,6 +2015,18 @@
             }
         }
     },
+    "Koala.view.container.ElevationProfile": {
+        "config": {
+            "data": {
+                "title": "Höhenprofil",
+                "xLabel": "Distanz[km]",
+                "yLabel": "Höhe[m]",
+                "distanceLabel": "Distanz",
+                "elevationLabel": "Höhe",
+                "durationLabel": "Dauer"
+            }
+        }
+    },
     "Koala.view.panel.MobileHelp": {
         "config": {
             "data": {
