--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -885,7 +885,16 @@
                     "routingSummaryDetailsButton": "Details",
                     "profileCarText": "Driving",
                     "profileBycicleText": "Cycling",
-                    "profileWalkingText": "Walking"
+                    "profileWalkingText": "Walking",
+                    "addAvoidArea": "Avoid area",
+                    "uploadGeoJson": "Load GeoJSON",
+                    "deleteAvoidArea": "Delete avoid area",
+                    "drawAvoidArea": "Draw area",
+                    "errorFileUpload": "Could not load file. Please make sure the file is valid and try again.",
+                    "errorUploadedGeometryType": "The uploaded GeoJSON must be a polygon.",
+                    "errorTooManyFeatures": "The upload of multiple features is not supported. Please upload a single feature." ,
+                    "errorUploadedFileExtension": "Unsupported filetype. Please load a '.json' or '.geojson' file.",
+                    "errorZeroFeatures": "The uploaded GeoJSON does not contain features. Please upload one feature."
                 }
             }
         }
