--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -894,11 +894,16 @@
                     "uploadGeoJson": "Lade GeoJSON",
                     "deleteAvoidArea": "Lösche zu vermeidendes Gebiet.",
                     "drawAvoidArea": "Zeichne Gebiet",
+                    "selectAvoidAreaFromLayer": "Wähle von Layer",
                     "errorFileUpload": "Das Hochladen der Datei ist fehlgeschlagen.",
                     "errorUploadedGeometryType": "Das hochgeladene GeoJSON muss vom Typ Polygon sein.",
                     "errorTooManyFeatures": "Das hochladen mehrerer Features wird nicht unterstützt. Bitte laden Sie nur ein Feature hoch." ,
                     "errorUploadedFileExtension": "Dateityp wird nicht unterstützt. Bitte laden Sie nur eine '.json' oder '.geojson' Datei hoch.",
-                    "errorZeroFeatures": "Das hochgelandene GeoJSON enthält keine Features. Bitte laden Sie ein Feature hoch."
+                    "errorZeroFeatures": "Das hochgelandene GeoJSON enthält keine Features. Bitte laden Sie ein Feature hoch.",
+                    "errorGetFeatureInfo": "Das Polygon konnte aus dem Layer nicht ausgelesen werden.",
+                    "errorNoLayerFound": "An diesem Ort befindet sich kein gültiger Layer. Bitte versuchen Sie es erneut.",
+                    "errorNoPolygonChosen": "Das gewählte Feature ist kein Polygon. Bitte wählen Sie ein Polygon.",
+                    "errorAreaTooBig": "Das gewählte Polygon is zu groß. Bitte wählen Sie ein kleineres Polygon."
                 }
             }
         }
