--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -613,6 +613,7 @@
         "config": {
             "data": {
                 "logoTooltip": "Link zur BfS-Homepage",
+                "logoSource": "resources/images/BfS_Logo_Website_de_75.png",
                 "alertBtnText": "Ereignisse",
                 "alertBtnTooltip": "Ereignisinformation",
                 "routineMessageHeader": "Ereignis: <p style='font-size: 2em; margin: 5px 0 10px 0;'>[[title]]</p> (unverändert)",
@@ -930,7 +931,7 @@
         "config": {
             "data": {
                 "helpWinTitle": "Hilfe",
-                "fallbackHtml": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'>" +
+                "fallbackHtml": "<img class='img' src='resources/images/BfS_Logo_Website_de_75.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'>" +
                     "<h2> Willkommen </h2>" +
                     "<div>Das " +
                     "<a href='http://www.bfs.de/DE/home/home_node.html' target='_blank'>Bundesamt für Strahlenschutz (<abbr title='Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)'>BfS</abbr>)</a>" +
@@ -966,7 +967,7 @@
             "data": {
                 "preface": {
                     "title": "Willkommen",
-                    "html": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'>" +
+                    "html": "<img class='img' src='resources/images/BfS_Logo_Website_de_75.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'>" +
                         "<h2> Willkommen </h2>" +
                         "<div>Das " +
                         "<a href='http://www.bfs.de/DE/home/home_node.html' target='_blank'>Bundesamt für Strahlenschutz (<abbr title='Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)'>BfS</abbr>)</a>" +
@@ -1947,7 +1948,7 @@
         "config": {
             "data": {
                 "title": "Hilfe",
-                "helpPrefaceTitle": "<img class='img' src='classic/resources/img/bfs-logo.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'><br /><h1 style='font-weight:bold; font-size:16px; color:black'>Willkommen</h1>",
+                "helpPrefaceTitle": "<img class='img' src='resources/images/BfS_Logo_Website_de_75.png' title='BfS-Logo' alt='bfs-logo.png' width='100' height='39' style='float:right'><br /><h1 style='font-weight:bold; font-size:16px; color:black'>Willkommen</h1>",
                 "helpPrefaceHtml": "<div>Das " +
                     "<a href='http://www.bfs.de/DE/home/home_node.html' target='_blank'>Bundesamt für Strahlenschutz (<abbr title='Bundesamt für Strahlenschutz (Federal Office for Radiation Protection)'>BfS</abbr>)</a>" +
                     " stellt mit dem " +
